--- a/css/style.css
+++ b/css/style.css
@@ -793,6 +793,9 @@ a:hover{
     border-bottom: solid 4px #ed6f30;  
     transform: scaleX(0);  
     transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 6px;
+    width: 49%;
 }
 .carousel-homebanner .owl-nav .owl-next::after{
     transform-origin: 100% 50%;
@@ -812,11 +815,100 @@ a:hover{
     border-bottom: solid 4px #ed6f30;  
     transform: scaleX(0);  
     transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 6px;
+    width: 49%;
 }
 .carousel-homebanner .owl-nav .owl-prev::after{
     transform-origin: 0% 50%;
 }
 .carousel-homebanner .owl-nav .owl-prev:hover::after{
+    transform: scaleX(1);
+    transform-origin: 100% 50%;
+}
+.carousel-milestone .owl-nav .owl-next{
+    display:inline-block;
+    margin:0;
+}
+.carousel-milestone .owl-nav button.owl-next::after{
+    display:block;
+    content: '';
+    border-bottom: solid 4px #ed6f30;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 2px;
+    width: 49%;
+}
+.carousel-milestone .owl-nav .owl-next::after{
+    transform-origin: 100% 50%;
+}
+.carousel-milestone .owl-nav .owl-next:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
+
+.carousel-milestone .owl-nav .owl-prev{
+    display:inline-block;
+    margin:0;
+}
+.carousel-milestone .owl-nav button.owl-prev::after{
+    display:block;
+    content: '';
+    border-bottom: solid 4px #ed6f30;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 2px;
+    width: 49%;
+}
+.carousel-milestone .owl-nav .owl-prev::after{
+    transform-origin: 0% 50%;
+}
+.carousel-milestone .owl-nav .owl-prev:hover::after{
+    transform: scaleX(1);
+    transform-origin: 100% 50%;
+}
+.carousel-gallery .owl-nav .owl-next{
+    display:inline-block;
+    margin:0;
+}
+.carousel-gallery .owl-nav button.owl-next::after{
+    display:block;
+    content: '';
+    border-bottom: solid 4px #ed6f30;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 2px;
+    width: 49%;
+}
+.carousel-gallery .owl-nav .owl-next::after{
+    transform-origin: 100% 50%;
+}
+.carousel-gallery .owl-nav .owl-next:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
+
+.carousel-gallery .owl-nav .owl-prev{
+    display:inline-block;
+    margin:0;
+}
+.carousel-gallery .owl-nav button.owl-prev::after{
+    display:block;
+    content: '';
+    border-bottom: solid 4px #ed6f30;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 2px;
+    width: 49%;
+}
+.carousel-gallery .owl-nav .owl-prev::after{
+    transform-origin: 0% 50%;
+}
+.carousel-gallery .owl-nav .owl-prev:hover::after{
     transform: scaleX(1);
     transform-origin: 100% 50%;
 }
@@ -831,6 +923,9 @@ a:hover{
     border-bottom: solid 4px #666666;  
     transform: scaleX(0);  
     transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 6px;
+    width: 49%;
 }
 .carousel-ourbusiness .owl-nav .owl-next::after{
     transform-origin: 100% 50%;
@@ -850,6 +945,9 @@ a:hover{
     border-bottom: solid 4px #666666;  
     transform: scaleX(0);  
     transition: transform 250ms ease-in-out;
+    position: absolute;
+    bottom: 6px;
+    width: 49%;
 }
 .carousel-ourbusiness .owl-nav .owl-prev::after{
     transform-origin: 0% 50%;
@@ -1022,7 +1120,7 @@ a:hover{
     .footer-content-home {
         background-image: url(../images/footer-home-background-mobile-15.jpg);
         padding-top: 7rem;
-        padding-bottom: 8rem;
+        padding-bottom: 12rem;
         background-position: bottom;
     }
     .footer-details{
@@ -1381,5 +1479,36 @@ a:hover{
     .csr-tab .nav-link {
         padding: 14px 9px;
         font-size: 0.7rem;
+    }
+    .gallery-top {
+        background-image: url(../images/gallery-top-header-mobile-03.jpg);
+        padding-top: 32.6rem;
+    }
+    .gallery-top .elements {
+        width: 20vw;
+        z-index: 2;
+    }
+    .contact-top {
+        background-image: url(../images/contact-header-top-bg-mobile-02.jpg);
+        padding-top: 32.6rem;
+    }
+    .contact-top .elements{
+        width: 20vw;
+        z-index: 2;
+    }
+    .contact-mid .content-mid{
+        width: 100%;
+        float: none;
+    }
+    .contact-mid .content-wrapper {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+    .section-forms-ansaf {
+        padding: 3rem 3rem;
+    }
+    .form-group.left-forms {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 }
