--- a/css/style.css
+++ b/css/style.css
@@ -1591,4 +1591,20 @@ a:hover{
     .carousel-milestone .owl-nav button.owl-prev::after{
         width: 100%;
     }
+    .carousel-milestone .owl-nav .owl-next:hover::after {
+        transform: none;
+        transform-origin: 0%;
+    }
+    .carousel-milestone .owl-nav .owl-prev:hover::after {
+        transform: none;
+        transform-origin: 0%;
+    }
+    .carousel-milestone .owl-nav .owl-next:active::after {
+        transform: none;
+        transform-origin: 0% 50%;
+    }
+    .carousel-milestone .owl-nav .owl-prev:active::after {
+        transform: none;
+        transform-origin: 100% 50%;
+    }
 }
