--- a/css/style.css
+++ b/css/style.css
@@ -818,7 +818,7 @@ a:hover{
 .section-forms-ansaf{
     padding: 7rem 3rem 10rem;
 }
-.section-forms-ansaf .button-forms{
+.section-forms-ansaf .button-form{
     position: absolute;
     bottom: 0;
     width: 100%;
