--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,10 @@ a:hover{
 .section-forms-ansaf .button-form{
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 94%;
+}
+.section-forms-ansaf .button-form:hover{
+    color: #0e212d;
 }
 .owl-theme .owl-nav [class*="owl-"]:hover{
     background: none;
@@ -1081,6 +1084,28 @@ a:hover{
     transform-origin: 100% 50%;
 }
 .link-gray-border:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
+.section-forms-ansaf .button-form{
+    display:inline-block;
+    margin:0;
+}
+.section-forms-ansaf .button-form::after{
+    display:block;
+    content: '';
+    border-bottom: solid 4px #0e212d;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    margin-bottom: -8px;
+    margin-left: -2px;
+    margin-right: -2px;
+    padding-bottom: 6px;
+}
+.section-forms-ansaf .button-form::after{
+    transform-origin: 100% 50%;
+}
+.section-forms-ansaf .button-form:hover::after{
     transform: scaleX(1);
     transform-origin: 0% 50%;
 }
