--- a/css/style.css
+++ b/css/style.css
@@ -1124,6 +1124,13 @@ a:hover{
     transform: scaleX(1);
     transform-origin: 0% 50%;
 }
+.career-brief{
+    background-image: url(../images/career-brief-bg-02.jpg);
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-repeat: no-repeat;
+    background-size: cover;;
+}
 @media screen and (max-width: 414px) {
     p {
         font-size: 0.9rem;
